--- a/packages/easm-react-example/.babelrc
+++ b/packages/easm-react-example/.babelrc
@@ -1,11 +1,7 @@
 {
   "presets": [
-    [
-      "@babel/preset-react"
-    ],
-    [
-      "@babel/preset-env"
-    ]
+    [ "@babel/preset-react"],
+    [ "@babel/preset-env" ]
   ],
-  "plugins": [ "@easm/transform"]
+  "plugins": [ ]
 }
