--- a/packages/easm-react/package.json
+++ b/packages/easm-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easm/react",
-  "version": "0.2.2-beta.2",
+  "version": "0.2.3",
   "author": {
     "name": "Matthias Fischer",
     "email": "opensource@dotnetautor.de",
@@ -18,7 +18,8 @@
     "postbuild": "node ../../scripts/copy",
     "pack": "npm pack ./dist",
     "postpack": "mkdir -p ../../dist && mv *.tgz ../../dist",
-    "docs": "typedoc -p . --theme minimal --target 'es6' --excludeNotExported --excludePrivate --ignoreCompilerErrors --exclude \"**/src/**/__tests__/*.*\" --out docs src/"
+    "docs": "typedoc -p . --theme minimal --target 'es6' --excludeNotExported --excludePrivate --ignoreCompilerErrors --exclude \"**/src/**/__tests__/*.*\" --out docs src/",
+    "publish": "npm publish ./dist -tag latest"
   },
   "main": "./dist/bundles/index.umd.js",
   "module": "./dist/esm5/index.js",
@@ -26,7 +27,7 @@
   "typings": "./dist/types/index.d.ts",
   "sideEffects": false,
   "dependencies": {
-    "@easm/core": "^0.2.2-beta"
+    "@easm/core": "^0.2.3"
   },
   "peerDependencies": {
     "react": "^16.8.3"
