--- a/packages/easm-react-example/package.json
+++ b/packages/easm-react-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easm/react-demo",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "author": {
     "name": "Matthias Fischer",
     "email": "opensource@dotnetautor.de",
@@ -23,36 +23,41 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@easm/core": "^0.2.3",
-    "@easm/react": "^0.2.3",
-    "@easm/babel-plugin-transform": "^0.2.3",
-    "@easm/ts-plugin-transform": "^0.2.3",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "@easm/core": "~0.3",
+    "@easm/react": "~0.3",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
+    "react": "^17",
+    "react-dom": "^17"
   },
   "devDependencies": {
-    "shx": "0.3.2",
-    "typedoc": "0.14.2",
-    "typescript": "3.5.3",
-    "typescript-tslint-plugin": "0.3.1",
-    "@types/react": "^16.8.5",
-    "@types/react-dom": "^16.8.2",
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "terser-webpack-plugin": "1.2.3",
-    "ts-loader": "5.3.3",
-    "url-loader": "1.1.2",
-    "style-loader": "0.23.1",
-    "postcss-loader": "3.0.0",
-    "raw-loader": "1.0.0",
-    "css-loader": "2.1.0",
-    "file-loader": "3.0.1",
-    "babel-loader": "8.0.5",
-    "autoprefixer": "9.4.9",
-    "webpack": "4.29.5",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.2.1"
+    "@babel/preset-react" : "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "shx": "0.3.3",
+    "typedoc": "0.20.13",
+    "typescript": "4.1.3",
+    "typescript-tslint-plugin": "1.0.1",
+    "rollup": "2.26.1",
+    "rollup-plugin-sourcemaps": "0.6.3",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-uglify": "6.0.4",
+    "rollup-plugin-terser": "7.0.2",
+    "webpack-config-utils": "2.3.1",
+    "ts-loader": "8.0.14",
+    "url-loader": "4.1.1",
+    "style-loader": "2.0.0",
+    "postcss-loader": "4.1.0",
+    "raw-loader": "4.0.2",
+    "css-loader": "5.0.1",
+    "file-loader": "6.2.0",
+    "babel-loader": "8.2.2",
+    "autoprefixer": "10.2.1",
+    "webpack": "^4",
+    "webpack-cli": "^3",
+    "webpack-dev-server": "^3"
   }
 }
