--- a/packages/easm-react/package.json
+++ b/packages/easm-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@easm/react",
-  "version": "0.2.7",
+  "version": "0.3.0",
   "author": {
     "name": "Matthias Fischer",
     "email": "opensource@dotnetautor.de",
@@ -27,25 +27,26 @@
   "typings": "./dist/types/index.d.ts",
   "sideEffects": false,
   "dependencies": {
-    "@easm/core": "^0.2.3"
+    "@easm/core": "~0.3"
   },
   "peerDependencies": {
-    "react": "^16.8.3"
+    "react": "^17"
   },
   "devDependencies": {
-    "shx": "0.3.2",
-    "typedoc": "0.14.2",
-    "typescript": "3.5.3",
-    "typescript-tslint-plugin": "0.3.1",
-    "rollup": "1.3.0",
-    "rollup-plugin-sourcemaps": "0.4.2",
-    "rollup-plugin-node-resolve": "4.0.1",
-    "rollup-plugin-json": "3.1.0",
-    "rollup-plugin-commonjs": "9.2.1",
-    "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-uglify": "6.0.2",
-    "rollup-plugin-terser": "4.0.4",
+    "shx": "0.3.3",
+    "typedoc": "0.20.13",
+    "typescript": "4.1.3",
+    "typescript-tslint-plugin": "1.0.1",
+    "rollup": "2.26.1",
+    "rollup-plugin-sourcemaps": "0.6.3",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-uglify": "6.0.4",
+    "rollup-plugin-terser": "7.0.2",
     "webpack-config-utils": "2.3.1",
-    "@types/react": "^16.8.5"
+    "@types/react": "^17"
   }
 }
