Initialize test and coverage environment

--- a/packages/easm-core/tsconfig.json
+++ b/packages/easm-core/tsconfig.json
@@ -29,5 +29,11 @@
   "include": [
     "./src"
   ],
-  "compileOnSave": false
+  "compileOnSave": false,
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS",
+      "sourceMap": true
+    }
+  }
 }
