--- a/packages/easm-core/package.json
+++ b/packages/easm-core/package.json
@@ -19,7 +19,9 @@
     "pack": "npm pack ./dist",
     "postpack": "mkdir -p ../../dist && mv *.tgz ../../dist",
     "docs": "typedoc -p . --theme minimal --target 'es6' --excludeNotExported --excludePrivate --ignoreCompilerErrors --exclude \"**/src/**/__tests__/*.*\" --out docs src/",
-    "publish": "npm publish ./dist -tag latest"
+    "publish": "npm publish ./dist -tag latest",
+    "test": "tape -r ts-node/register/transpile-only tests/*.test.ts",
+    "coverage": "nyc tape -r ts-node/register/transpile-only tests/*.test.ts"
   },
   "main": "./dist/bundles/index.umd.js",
   "module": "./dist/esm5/index.js",
@@ -32,19 +34,23 @@
   },
   "devDependencies": {
     "@types/events": "3.0.0",
+    "@types/tape": "4.13.0",
+    "nyc": "15.1.0",
+    "rollup": "2.26.1",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-sourcemaps": "0.6.3",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-uglify": "6.0.4",
     "shx": "0.3.3",
+    "tape": "5.1.1",
+    "ts-node": "9.1.1",
     "typedoc": "0.20.13",
     "typescript": "4.1.3",
     "typescript-tslint-plugin": "1.0.1",
-    "rollup": "2.26.1",
-    "rollup-plugin-sourcemaps": "0.6.3",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-json": "4.0.0",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-uglify": "6.0.4",
-    "rollup-plugin-terser": "7.0.2",
     "webpack-config-utils": "2.3.1"
   }
 }
