--- a/packages/babel-plugin-transform/package.json
+++ b/packages/babel-plugin-transform/package.json
@@ -22,8 +22,8 @@
   },
   "main": "./dist/lib/index.js",
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.4",
-    "@babel/preset-env": "^7.3.4"
+    "@babel/cli": "7.13.10",
+    "@babel/core": "7.13.10",
+    "@babel/preset-env": "7.13.10"
   }
 }
